--- a/package.json
+++ b/package.json
@@ -4,15 +4,32 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "server": "node index",
     "android": "expo start --android",
+    "package": "npx expo export:web",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.2",
+    "cors": "^2.8.5",
     "expo": "~47.0.12",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "express": "^4.18.2",
+    "mongodb": "^5.0.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.9",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
