--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "node index",
+    "dev": "expo start",
     "server": "node index",
     "android": "expo start --android",
     "package": "npx expo export:web",
