--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node index",
     "dev": "expo start",
+    "prod": "expo start --no-dev --minify",
     "server": "node index",
     "android": "expo start --android",
     "package": "npx expo export:web",
@@ -13,6 +14,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
@@ -20,7 +22,9 @@
     "axios": "^1.3.2",
     "cors": "^2.8.5",
     "expo": "~47.0.12",
-    "expo-splash-screen": "^0.17.5",
+    "expo-device": "~5.0.0",
+    "expo-image": "^1.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
@@ -30,7 +34,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "rn-responsive-styles": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
