--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "android": "expo start --android",
     "package": "npx expo export:web",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
@@ -22,12 +23,15 @@
     "axios": "^1.3.2",
     "cors": "^2.8.5",
     "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
     "expo-device": "~5.0.0",
     "expo-image": "^1.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
