--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prod": "expo start --no-dev --minify",
     "server": "node index",
     "android": "expo start --android",
-    "package": "npx expo export:web",
+    "package": "expo export:web",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build": "eas build -p android --profile preview"
@@ -28,7 +28,9 @@
     "expo-image": "^1.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "mongodb": "^5.0.1",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
@@ -39,8 +41,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "rn-responsive-styles": "^2.1.0",
-    "expo-updates": "~0.15.6"
+    "rn-responsive-styles": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
